k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-react-hello-svc
  labels:
    app: nginx-react-hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: nginx-react-hello
